--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -3,3 +3,11 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  form(action="...", method="post", enctype="multipart/form-data")
+    input#upload(type="file", name="displayImage")
+    button(type="button") Upload
+
+block scripts
+
+  script(src="./javascripts/upload.js")
