--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -4,9 +4,10 @@ block content
   h1= title
   p Welcome to #{title}
 
-  form(action="...", method="post", enctype="multipart/form-data")
-    input#upload(type="file", name="displayImage")
-    button(type="button") Upload
+    form
+      input#upload(type="file", name="uploads[]" multiple="multiple")
+      .alert.alert-danger.hidden(role="alert") Please upload a photo.
+      button#upload-btn(type="button") Upload
 
 block scripts
 
