--- a/app_ui/views/contact.jade
+++ b/app_ui/views/contact.jade
@@ -2,4 +2,13 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p 
+    ul
+      a(href="https://github.com/GabrielAlacchi") Gabriel Alacchi
+    ul
+      a(href="https://github.com/rfratila") Robert Fratila
+    ul
+      a(href="https://github.com/DavidLi-Minxiao") David Li
+    ul
+      a(href="https://github.com/aywscott") Alice Scott
+ 
