--- a/app_ui/views/examples.jade
+++ b/app_ui/views/examples.jade
@@ -3,3 +3,23 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  
+  div(class="img")
+    a(target="_blank", href="http://placehold.it/350x300")
+    img( src="http://placehold.it/350x300", class="example-image")
+    div(class="description") Description Here
+
+  div(class="img")
+    a(target="_blank", href="http://placehold.it/350x300")
+    img( src="http://placehold.it/350x300", class="example-image")
+    div(class="description") Description Here
+
+  div(class="img")
+    a(target="_blank", href="http://placehold.it/350x300")
+    img( src="http://placehold.it/350x300", class="example-image")
+    div(class="description") Description Here
+
+  div(class="img")
+    a(target="_blank", href="http://placehold.it/350x300")
+    img( src="http://placehold.it/350x300", class="example-image")
+    div(class="description") Description Here
