Replaced bootstrap with mdl

--- a/app_ui/views/layout.jade
+++ b/app_ui/views/layout.jade
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    link(rel='stylesheet', href='./stylesheets/style.css')
+    link(rel='stylesheet', href='./stylesheets/material.min.css"')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
   body
     nav.navbar.navbar-default
       .container-fluid
@@ -29,7 +30,7 @@ html
       block content
 
       script(src="https://code.jquery.com/jquery-2.2.4.min.js")
-      script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+      script(src='./javascripts/material.min.js')
 
       block scripts
         
