Python-shell loading of python process

--- a/app_ui/views/layout.jade
+++ b/app_ui/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='./stylesheets/style.css')
-    link(rel='stylesheet', href='./stylesheets/material.min.css"')
+    link(rel='stylesheet', href='./stylesheets/material.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
   body
     nav.navbar.navbar-default
