--- a/app_ui/views/contact.jade
+++ b/app_ui/views/contact.jade
@@ -3,7 +3,13 @@ extends layout
 block content
   h1= title
   p 
-    ul
+    ul(class="demo-list-three mdl-list")
+      li(class="mdl-list__item mdl-list__item--three-line")
+
+
+
+
+
       a(href="https://github.com/GabrielAlacchi") Gabriel Alacchi
     ul
       a(href="https://github.com/rfratila") Robert Fratila
