--- a/app_ui/views/layout.jade
+++ b/app_ui/views/layout.jade
@@ -3,27 +3,25 @@ html
   head
     title= title
     link(rel='stylesheet', href='./stylesheets/style.css')
-    link(rel='stylesheet', href='./stylesheets/material.min.css"')
+    link(rel='stylesheet', href='./stylesheets/material.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
-  body
-    nav.navbar.navbar-default
-      .container-fluid
-        .navbar-header
-          button.navbar-toggle(type="button", data-toggle="collapse", data-target=".navbar-collapse")
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href="/") Image-Painter
-        .collapse.navbar-collapse
-          ul.nav.navbar-nav.navbar-right
-            li(class=title=='Image-Painter'?'active':undefined)
-              a(href="/") Home
-            li(class=title=='About'?'active':undefined)
-              a(href="/about") About
-            li(class=title=='Examples'?'active':undefined)
-              a(href="/examples") Examples
-            li(class=title=='Contact'?'active':undefined)
-              a(href="/contact") Contact
+    link(rel='stylesheet', href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css")
+    script(defer src="https://code.getmdl.io/1.3.0/material.min.js")
+
+  div(class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs")
+    header(class="mdl-layout__header")
+      div(class="mdl-layout__header-row")          
+
+        span(class="mdl-layout-title") Image-Painter
+      
+
+      div(class="mdl-layout__tab-bar mdl-js-ripple-effect")
+        a(href="/" class="mdl-layout__tab is-active") Home
+        a(href="/about" class="mdl-layout__tab") About
+        a(href="/examples" class="mdl-layout__tab") Examples
+        a(href="/contact" class="mdl-layout__tab") Contact
+
+ 
 
     .container
 
