Finished minimalistic CSS styling

--- a/app_ui/views/about.jade
+++ b/app_ui/views/about.jade
@@ -1,6 +1,15 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  p insert description here.
+  .row
+    .col-md-8.col-md-offset-2
+      h2= title
+      p Have you ever wondered what you would look like as a Picasso painting? Or what a "Starry Night Trump" would look like?
+      p.bold Well wonder no more!
+      p Using the technique of 
+        span.italic style transfer
+        span , we apply machine learning to generate horribly awesome pictures from your very own.
+
+  .row#grey
+    .col-md-8.col-md-offset-2
+      p
