--- a/app_ui/views/examples.jade
+++ b/app_ui/views/examples.jade
@@ -1,25 +1,37 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  
-  div(class="img")
-    a(target="_blank", href="http://placehold.it/350x300")
-    img( src="http://placehold.it/350x300", class="example-image")
-    div(class="description") Description Here
+  .row.no-bottom
+    h2= title
 
-  div(class="img")
-    a(target="_blank", href="http://placehold.it/350x300")
-    img( src="http://placehold.it/350x300", class="example-image")
-    div(class="description") Description Here
-
-  div(class="img")
-    a(target="_blank", href="http://placehold.it/350x300")
-    img( src="http://placehold.it/350x300", class="example-image")
-    div(class="description") Description Here
-
-  div(class="img")
-    a(target="_blank", href="http://placehold.it/350x300")
-    img( src="http://placehold.it/350x300", class="example-image")
-    div(class="description") Description Here
+  .row
+    .col-lg-4.col-sm-6
+      div(class="img")
+        a(target="_blank", href="http://placehold.it/350x300")
+        img( src="http://placehold.it/350x300", class="example-image")
+        div(class="description") Description Here
+    .col-lg-4.col-sm-6
+      div(class="img")
+        a(target="_blank", href="http://placehold.it/350x300")
+        img( src="http://placehold.it/350x300", class="example-image")
+        div(class="description") Description Here
+    .col-lg-4.col-sm-6
+      div(class="img")
+        a(target="_blank", href="http://placehold.it/350x300")
+        img( src="http://placehold.it/350x300", class="example-image")
+        div(class="description") Description Here
+    .col-lg-4.col-sm-6
+      div(class="img")
+        a(target="_blank", href="http://placehold.it/350x300")
+        img( src="http://placehold.it/350x300", class="example-image")
+        div(class="description") Description Here
+    .col-lg-4.col-sm-6
+      div(class="img")
+        a(target="_blank", href="http://placehold.it/350x300")
+        img( src="http://placehold.it/350x300", class="example-image")
+        div(class="description") Description Here
+    .col-lg-4.col-sm-6
+      div(class="img")
+        a(target="_blank", href="http://placehold.it/350x300")
+        img( src="http://placehold.it/350x300", class="example-image")
+        div(class="description") Description Here
