--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-  .row#title
+  .row
     .col-md-8.col-md-offset-2
       h1= title
       h3.subtitle Make a simple photo into a true work of art.
     
-  .row#submission
+  .row#blue
     .col-md-8.col-md-offset-2
       .row
         i.material-icons backup
