Added modal for image

--- a/app_ui/views/about.jade
+++ b/app_ui/views/about.jade
@@ -12,4 +12,8 @@ block content
 
   .row#grey
     .col-md-8.col-md-offset-2
-      p
+      p Some explanation behind the buzzwords you might have been hearing...
+      p.italic Machine Learning
+      p Born from artificial intelligence, machine learning means creating algorithms that find patterns in data, which can then be used to analyze new data.
+      p.italic Neural Networks
+      p Neural Networks are based on the way biological nervous systems process information. These networks are composed of clusters of artificial neurons that receive input, recognize patterns, and classify data.
