Added firebase code

--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -33,4 +33,6 @@ block content
 
 block scripts
 
+  script(src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js")
+  script(src="/javascripts/firebase.js")
   script(src="./javascripts/upload.js")
