--- a/app_ui/views/image.jade
+++ b/app_ui/views/image.jade
@@ -7,3 +7,8 @@ block content
         img#original(src="./images/loading.gif")
       .col-md-6
         img#filtered(src="./images/loading.gif")
+
+  script(src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js")
+  script(src="https://code.jquery.com/jquery-2.2.4.min.js")
+  script(src="/javascripts/firebase.js")
+  script(src="/javascripts/image.js")
