Added upload thingy

--- a/app_ui/views/image.jade
+++ b/app_ui/views/image.jade
@@ -3,10 +3,10 @@ extends layout
 block content
   .row#vertcenter
     .col-md-10.col-md-offset-1
-      .col-md-6
-        img#original(src="./images/loading.gif")
-      .col-md-6
-        img#filtered(src="./images/loading.gif")
+      .col-md-6.col-xs-12.col-sm-12
+        img#original(src="./images/loading.gif", class='image')
+      .col-md-6.col-xs-12.col-sm-12
+        img#filtered(src="./images/loading.gif", class='image')
 
   script(src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js")
   script(src="https://code.jquery.com/jquery-2.2.4.min.js")
