--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -20,14 +20,17 @@ block content
           #transformation.form-group
             label(for="sel1") Select List:
             select.form-control#sel1
-              option Starry Night
-              option Scream
-              option Mona Lisa
-              option The Great Wave
-
-
-block scripts
+              option The Scream
+              option Mosaic
+              option La Muse
+              option Wave
+              option Feathers
+              option Composition VII
+              option Cubist
+              option Udnie
 
   script(src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js")
+  script(src="https://code.jquery.com/jquery-2.2.4.min.js")
   script(src="/javascripts/firebase.js")
+  script(src="./javascripts/script.js")
   script(src="./javascripts/upload.js")
