Added images to example

--- a/app_ui/views/examples.jade
+++ b/app_ui/views/examples.jade
@@ -8,30 +8,30 @@ block content
     .col-lg-4.col-sm-6
       div(class="img")
         a(target="_blank", href="http://placehold.it/350x300")
-        img( src="http://placehold.it/350x300", class="example-image")
+        img( src="/images/hotel.jpg", class="example-image", width="350px", height="300px")
         div(class="description") Description Here
     .col-lg-4.col-sm-6
       div(class="img")
         a(target="_blank", href="http://placehold.it/350x300")
-        img( src="http://placehold.it/350x300", class="example-image")
+        img( src="/images/lake.jpg", class="example-image", width="350px", height="300px")
         div(class="description") Description Here
     .col-lg-4.col-sm-6
       div(class="img")
         a(target="_blank", href="http://placehold.it/350x300")
-        img( src="http://placehold.it/350x300", class="example-image")
+        img( src="/images/food.jpg", class="example-image", width="350px", height="300px")
         div(class="description") Description Here
     .col-lg-4.col-sm-6
       div(class="img")
         a(target="_blank", href="http://placehold.it/350x300")
-        img( src="http://placehold.it/350x300", class="example-image")
+        img( src="http://placehold.it/350x300", class="example-image", width="350px", height="300px")
         div(class="description") Description Here
     .col-lg-4.col-sm-6
       div(class="img")
         a(target="_blank", href="http://placehold.it/350x300")
-        img( src="http://placehold.it/350x300", class="example-image")
+        img( src="http://placehold.it/350x300", class="example-image", width="350px", height="300px")
         div(class="description") Description Here
     .col-lg-4.col-sm-6
       div(class="img")
         a(target="_blank", href="http://placehold.it/350x300")
-        img( src="http://placehold.it/350x300", class="example-image")
+        img( src="http://placehold.it/350x300", class="example-image", width="350px", height="300px")
         div(class="description") Description Here
