Modified example and contact pages

--- a/app_ui/views/contact.jade
+++ b/app_ui/views/contact.jade
@@ -9,21 +9,21 @@ block content
     .col-md-10.col-md-offset-1
       .col-lg-3.col-md-6
         a(href="https://github.com/GabrielAlacchi")
-          img.img-circle.img-responsive(src="./images/gabriel.jpg") 
+          img.img-circle.img-responsive(src="./images/gabriel_feathers.jpg")
           p Gabriel Alacchi
           p.small "Don't ask me how this works, but it works."
       .col-lg-3.col-md-6
         a(href="https://github.com/rfratila")
-          img.img-circle.img-responsive(src="./images/robert.jpg")
+          img.img-circle.img-responsive(src="./images/robert_composition_vii.jpg")
           p Robert Fratila
           p.small "You gotta pull first before you push."
       .col-lg-3.col-md-6
         a(href="https://github.com/DavidLi-Minxiao")
-          img.img-circle.img-responsive(src="./images/david.jpg")
+          img.img-circle.img-responsive(src="./images/david_mosaic.jpg")
           p David Li
           p.small "I thought this was COMP 202."
       .col-lg-3.col-md-6
         a(href="https://github.com/aywscott") 
-          img.img-circle.img-responsive(src="./images/alice.jpg")
+          img.img-circle.img-responsive(src="./images/alice_cubist.jpg")
           p Alice Scott
           p.small "How do you exit Vim???"
