slight UI redesign

--- a/app_ui/views/about.jade
+++ b/app_ui/views/about.jade
@@ -11,7 +11,9 @@ block content
         p.bold Well wonder no more!
         p Using the technique of 
           span.italic style transfer
-          span , we apply machine learning to generate horribly awesome pictures from your very own.
+          span , p
+          span.red AI
+          span nt applies machine learning to generate horribly awesome pictures from your very own.
 
   .row#grey
     .col-md-10.col-md-offset-1
