--- a/app_ui/views/index.jade
+++ b/app_ui/views/index.jade
@@ -3,20 +3,22 @@ extends layout
 block content
   .row
     .col-md-8.col-md-offset-2
-      h1= title
+      h1 p
+        span.red AI
+        span nt
       h3.subtitle Make a simple photo into a true work of art.
     
   .row#blue
-    .col-md-8.col-md-offset-2
-      .col-sm-4
+    .col-md-8.col-md-offset-2.no-gutter
+      .col-sm-3.no-gutter
         i.material-icons backup
-      .col-sm-8
-        input#upload(type="file", name="uploads[]" multiple="multiple")
-        button#upload-btn.btn.btn-primary.btn-large(type="button") Select File
-        button#upload-submit.btn.btn-primary.btn-large(type="button") Transform
-        .col-md-6
+      .col-sm-9.no-gutter
+        .col-md-8.no-gutter
+          input#upload(type="file", name="uploads[]" multiple="multiple")
+          button#upload-btn.btn.btn-primary.btn-large(type="button") Select File
+          button#upload-submit.btn.btn-primary.btn-large(type="button") Transform
           p#fileselected.text-center
-        .col-md-6
+        .col-md-4.no-gutter
           #transformation.form-group
             label(for="sel1") Select List:
             select.form-control#sel1
@@ -28,6 +30,7 @@ block content
               option Composition VII
               option Cubist
               option Udnie
+          #sample
 
   script(src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js")
   script(src="https://code.jquery.com/jquery-2.2.4.min.js")
