Error messages and UI layouts

--- a/app_ui/views/about.jade
+++ b/app_ui/views/about.jade
@@ -3,9 +3,9 @@ extends layout
 block content
   .row
     .col-md-10.col-md-offset-1
-      .col-md-5
+      .col-md-4
         img.img-responsive(src="https://uploads4.wikiart.org/images/m-c-escher/drawing-hands.jpg!Large.jpg")
-      .col-md-7
+      .col-md-8
         h2.no-top= title
         p Have you ever wondered what you would look like as a Picasso painting? Or what a "Starry Night Trump" would look like?
         p.bold Well wonder no more!
@@ -15,10 +15,10 @@ block content
           span.red AI
           span nt applies machine learning to generate horribly awesome pictures from your very own.
 
-  .row#grey
+  .row.grey.pin
     .col-md-10.col-md-offset-1
       p Some explanation behind the buzzwords you might have been hearing...
       p.italic Machine Learning
-      p Born from artificial intelligence, machine learning means creating algorithms that find patterns in data, which can then be used to analyze new data.
+      p Born from artificial intelligence, machine learningg means creating algorithms that find patterns in data, which can then be used to analyze new data.
       p.italic Neural Networks
       p Neural Networks are based on the way biological nervous systems process information. These networks are composed of clusters of artificial neurons that receive input, recognize patterns, and classify data.
