--- a/app_ui/views/contact.jade
+++ b/app_ui/views/contact.jade
@@ -10,20 +10,20 @@ block content
       .col-lg-3.col-md-6
         a(href="https://github.com/GabrielAlacchi")
           img.img-circle.img-responsive(src="./images/gabriel_feathers.jpg")
-          p Gabriel Alacchi
-          p.small "Don't ask me how this works, but it works."
+          p.text-center Gabriel Alacchi
+          p.small.text-center "Don't ask me how this works, but it works."
       .col-lg-3.col-md-6
         a(href="https://github.com/rfratila")
           img.img-circle.img-responsive(src="./images/robert_composition_vii.jpg")
-          p Robert Fratila
-          p.small "You gotta pull first before you push."
+          p.text-center Robert Fratila
+          p.small.text-center "You gotta pull first before you push."
       .col-lg-3.col-md-6
         a(href="https://github.com/DavidLi-Minxiao")
           img.img-circle.img-responsive(src="./images/david_mosaic.jpg")
-          p David Li
-          p.small "I thought this was COMP 202."
+          p.text-center David Li
+          p.small.text-center "I thought this was COMP 202."
       .col-lg-3.col-md-6
         a(href="https://github.com/aywscott") 
           img.img-circle.img-responsive(src="./images/alice_cubist.jpg")
-          p Alice Scott
-          p.small "How do you exit Vim???"
+          p.text-center Alice Scott
+          p.small.text-center "How do you exit Vim???"
