--- a/app_ui/views/layout.jade
+++ b/app_ui/views/layout.jade
@@ -17,7 +17,7 @@ html
             span.icon-bar
         .collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
-            li(class=title=='Image-Painter'?'active':undefined)
+            li(class=title=='pAInt'?'active':undefined)
               a(href="/") Home
             li(class=title=='About'?'active':undefined)
               a(href="/about") About
