--- a/app_ui/views/about.jade
+++ b/app_ui/views/about.jade
@@ -14,6 +14,8 @@ block content
           span , p
           span.red AI
           span nt applies machine learning to generate horribly awesome pictures from your very own.
+        p It's an unique way to be uniquely you - like you've never been before. 
+        p Painting for fun - for parties - for posting on friend's Facebook walls and making fun of - anything you want, we can do. 
 
   .row.grey.pin
     .col-md-10.col-md-offset-1
